--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -4,7 +4,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Spring eCommerce</a>
+        <a class="navbar-brand" th:href="@{/administrador}">Spring eCommerce</a>
 
         <form class="form-inline my-2 my-lg-0" method="post" action="#">
           <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name="nombre"
@@ -19,7 +19,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="carrito.html">Carrito</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Carrito</a></li>
             <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
           </ul>
         </div>
