--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -26,6 +26,8 @@
 
   <div th:include="usuario/template_usuario.html :: header-user" th:unless="${sesion == null}"></div>
 
+  <!-- Fin Navigation -->
+
   <!-- Page Content -->
   <div class="container">
 
