--- a/src/main/resources/templates/administrador/detalleorden.html
+++ b/src/main/resources/templates/administrador/detalleorden.html
@@ -22,9 +22,7 @@
 <body>
 
   <!-- Navigation -->
-  <div th:include="usuario/template_usuario.html :: header" th:if="${sesion == null}" ></div>
-
-  <div th:include="usuario/template_usuario.html :: header-user" th:unless="${sesion == null}"></div>
+  <div th:include="administrador/template_admin.html :: header"></div>
 
     <!-- Page Content -->
     <div class="container">
@@ -32,12 +30,13 @@
 
       <!-- Page Heading/Breadcrumbs -->
       <h1 class="mt-4 mb-3">
-        Spring eCommerce <small>Compras</small>
+        Spring eCommerce <small>Detalles</small>
       </h1>
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-        <li class="breadcrumb-item active">Compras</li>
+        <li class="breadcrumb-item"><a th:href="@{/administrador/ordenes}">Orden</a></li>
+        <li class="breadcrumb-item active">Detalle de Orden</li>
       </ol>
 
       <!-- Blog Post -->
@@ -48,18 +47,18 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th scope="col">No. de Orden</th>
-                  <th scope="col">Fecha</th>
-                  <th scope="col">Valor</th>
-                  <th scope="col">Acción</th>
+                  <th scope="col">Cantidad</th>
+                  <th scope="col">Producto</th>                  
+                  <th scope="col">Precio</th>
+                  <th scope="col">Total</th>                  
                 </tr>
               </thead>
               <tbody>
-                <tr th:each="orden: ${ordenes}">
-                  <td th:text="${orden.numero}" ></td>
-                  <td th:text="${orden.fechaCreacion}"></td>
-                  <td th:text="${orden.total}"></td>
-                  <td><a th:href="@{/usuario/detalle/{id} (id = ${orden.id}) }" class="btn btn-success">Ver Detalle</a></td>
+                <tr th:each="detalle : ${detalles}">
+                  <td th:text="${detalle.cantidad}">Cantidad</td>
+                  <td th:text="${detalle.nombre}">Producto</td>
+                  <td th:text="${detalle.precio}">Precio</td>
+                  <td th:text="${detalle.total}">Total</td>
                 </tr>
               </tbody>
             </table>
@@ -71,13 +70,13 @@
   <!-- /.container -->
 
   <!-- Footer -->
-  <div th:include="usuario/template_usuario.html :: footer"></div>
+<div th:include="administrador/template_admin.html :: footer"></div>
 
-  <!-- Bootstrap core JavaScript -->
-  <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-  <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-
+<!-- Bootstrap core JavaScript -->
+<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
 </body>
 
 </html>
+
