--- a/src/main/resources/templates/administrador/ordenes.html
+++ b/src/main/resources/templates/administrador/ordenes.html
@@ -22,9 +22,7 @@
 <body>
 
   <!-- Navigation -->
-  <div th:include="usuario/template_usuario.html :: header" th:if="${sesion == null}" ></div>
-
-  <div th:include="usuario/template_usuario.html :: header-user" th:unless="${sesion == null}"></div>
+  <div th:include="administrador/template_admin.html :: header"></div>
 
     <!-- Page Content -->
     <div class="container">
@@ -32,12 +30,12 @@
 
       <!-- Page Heading/Breadcrumbs -->
       <h1 class="mt-4 mb-3">
-        Spring eCommerce <small>Compras</small>
+        Spring eCommerce <small>Ordenes</small>
       </h1>
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-        <li class="breadcrumb-item active">Compras</li>
+        <li class="breadcrumb-item active">Ordenes</li>
       </ol>
 
       <!-- Blog Post -->
@@ -55,11 +53,11 @@
                 </tr>
               </thead>
               <tbody>
-                <tr th:each="orden: ${ordenes}">
-                  <td th:text="${orden.numero}" ></td>
-                  <td th:text="${orden.fechaCreacion}"></td>
-                  <td th:text="${orden.total}"></td>
-                  <td><a th:href="@{/usuario/detalle/{id} (id = ${orden.id}) }" class="btn btn-success">Ver Detalle</a></td>
+                <tr th:each="orden : ${ordenes}">
+                  <td th:text="${orden.numero}">4555454</td>
+                  <td th:text="${orden.fechaCreacion}">Fecha de Compra</td>
+                  <td th:text="${orden.total}">Total</td>
+                  <td><a th:href="@{/administrador/detalle/{id} (id = ${orden.id}) }" class="btn btn-success">Ver Detalle</a></td>
                 </tr>
               </tbody>
             </table>
@@ -71,12 +69,11 @@
   <!-- /.container -->
 
   <!-- Footer -->
-  <div th:include="usuario/template_usuario.html :: footer"></div>
+<div th:include="administrador/template_admin.html :: footer"></div>
 
-  <!-- Bootstrap core JavaScript -->
-  <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-  <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-
+<!-- Bootstrap core JavaScript -->
+<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
 </body>
 
